--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,3 +584,19 @@
      margin-left: 25%;
    }
  }
+
+ .blur {
+  filter: blur(5px);
+}
+
+.coming-soon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+}
